--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,5 +8,6 @@ jobs:
       - run: |
           apt-get install wget -y
           echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
+          gcloud --quiet config set project computelabs
           wget https://storage.googleapis.com/jbd-releases/gcp-connectivitytests-0.0.1 && chmod +x ./gcp-connectivitytests-0.0.1
           ./gcp-connectivitytests-0.0.1 -project=computelabs
